RWD: user profile

--- a/src/app/components/all-questions/all-questions.view.pug
+++ b/src/app/components/all-questions/all-questions.view.pug
@@ -22,7 +22,7 @@
                                                         h2 {{ question.question }}
 
                         .box-question--bottom
-                            .row
+                            .row.no-margin-right--sm
                                 .col-xs-7.col-md-8.col-lg-9
                                     .box-question__content
                                         .row.box-question__content--row
